feat: adapt offer service

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning-platform-backend",
+  "name": "musicians-manager",
   "version": "0.0.1",
   "description": "",
   "author": "",
