--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config test/e2e/jest-e2e.json"
+    "test:e2e": "jest --config test/e2e/jest-e2e.json",
+    "db-generate-modules": "prisma generate",
+    "db-post-schema": "prisma db push",
+    "db-get-schema": "prisma db pull"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -26,6 +29,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -63,6 +67,7 @@
     "jest": "^29.5.0",
     "jest-mock-extended": "^3.0.6",
     "prettier": "^3.0.0",
+    "prisma": "^5.19.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
