--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "jest --config test/e2e/jest-e2e.json",
     "db-generate-modules": "prisma generate",
     "db-post-schema": "prisma db push",
-    "db-get-schema": "prisma db pull"
+    "db-get-schema": "prisma db pull",
+    "db-primsa-seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -29,6 +30,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
