--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
+    "resend": "^4.4.1",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
   },
