--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.6.1",
     "jose": "^5.2.4",
     "jsrsasign": "^11.1.0",
     "ms": "^2.1.3",
