--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.19.1",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
+    "google-auth-library": "^9.15.1",
     "ioredis": "^5.6.1",
     "jose": "^5.2.4",
     "jsrsasign": "^11.1.0",
