--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       SA_PASSWORD: C33#8nstkKjkwQ
     ports:
       - "1434:1433"
-    hostname: "sqldb-music-manager-local"
+    hostname: "sqldb-bookaband-local"
 
   redis:
     container_name: redis-bookaband
