feat: add mongodb for eventType * Finish get filtered offers

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
 FRONTEND_URL=
-TOKEN_EXPIRES_IN_SECONDS=
+ACCESS_TOKEN_EXPIRES_IN_SECONDS=
+REFRESH_TOKEN_EXPIRES_IN_SECONDS=
 AUTHORIZE_SERVICE_PRIVATE_KEY=
 DATABASE_URL=
+RESEND_API_KEY=
+REDIS_URL=
+REDIS_PORT=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+MONGO_DB_NAME=
+MONGO_DB_URL=
