--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ioredis": "^5.6.1",
     "jose": "^5.2.4",
     "jsrsasign": "^11.1.0",
+    "mongodb": "^6.16.0",
     "ms": "^2.1.3",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
