fix: merge conflicts

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-FRONTEND_URL=
+FRONTEND_PAGE_URL=
+FRONTEND_AUTH_URL=
+FRONTEND_APP_URL=
 ACCESS_TOKEN_EXPIRES_IN_SECONDS=
 REFRESH_TOKEN_EXPIRES_IN_SECONDS=
 AUTHORIZE_SERVICE_PRIVATE_KEY=
