--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.19.1",
+    "@types/multer": "^1.4.12",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -45,6 +46,7 @@
     "jsrsasign": "^11.1.0",
     "mongodb": "^6.16.0",
     "ms": "^2.1.3",
+    "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
