--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "google-auth-library": "^9.15.1",
     "ioredis": "^5.6.1",
     "jose": "^5.2.4",
     "jsrsasign": "^11.1.0",
+    "moment-timezone": "^0.6.0",
     "mongodb": "^6.16.0",
     "ms": "^2.1.3",
     "multer": "^2.0.1",
