feat: update README and polish last details

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+EXTERNAL_URL=
 FRONTEND_PAGE_URL=
 FRONTEND_AUTH_URL=
 FRONTEND_APP_URL=
@@ -10,6 +11,12 @@ REDIS_URL=
 REDIS_PORT=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+GOOGLE_MAPS_API_KEY=
 MONGO_DB_NAME=
 MONGO_DB_URL=
-GOOGLE_MAPS_API_KEY=
+VIDSIGNER_BASE_URL=
+VIDSIGNER_SUBSCRIPTION_USERNAME=
+VIDSIGNER_SUBSCRIPTION_PASSWORD=
+VIDSIGNER_CLIENT_ID=
+VIDSIGNER_CLIENT_SECRET=
+BUS_TYPE=
