--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:unit": "jest --testPathPattern=/unit",
-    "test:integration": "jest --testPathPattern=/integration",
+    "test:integration": "jest --testPathPattern=/integration --runInBand",
     "test:e2e": "jest --testPathPattern=/e2e",
     "db-generate-modules": "prisma generate",
     "db-post-schema": "prisma db push",
     "db-get-schema": "prisma db pull",
-    "db-primsa-seed": "ts-node prisma/seed/seed.ts"
+    "db-primsa-seed": "ts-node prisma/seed/seed.ts",
+    "db-primsa-clear": "ts-node prisma/seed/clear.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -82,6 +83,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "jest-mock-extended": "^3.0.6",
     "prettier": "^3.0.0",
     "prisma": "^5.19.1",
