--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.9"
+
 services:
   postgres-db:
     container_name: postgres-bookaband
@@ -13,6 +14,13 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     hostname: "postgres-bookaband-local"
+    networks:
+      - default
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   mongo:
     container_name: mongodb-bookaband
@@ -26,12 +34,42 @@ services:
       MONGO_INITDB_DATABASE: bookaband
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    networks:
+      - default
 
   redis:
     container_name: redis-bookaband
     image: redis
+    restart: always
     ports:
-      - "6380:6379"
+      - "6379:6379"
+    networks:
+      - default
+
+  backend:
+    container_name: bookaband-backend
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    ports:
+      - "4000:4000"
+    env_file:
+      - ./.env.docker
+    depends_on:
+      postgres-db:
+        condition: service_healthy
+      mongo:
+        condition: service_started
+      redis:
+        condition: service_started
+    networks:
+      - default
+    restart: unless-stopped
 
 volumes:
   pgdata:
+
+networks:
+  default:
+    name: bookaband-network
+    external: true
