--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ REDIS_URL=
 REDIS_PORT=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_MAPS_API_KEY=
+# DEPRECATED: No longer required - using free alternatives (Nominatim + OSRM)
+# GOOGLE_MAPS_API_KEY=
 MONGO_DB_NAME=
 MONGO_DB_URL=
 VIDSIGNER_BASE_URL=
